FEAT: get directory by id
